--- a/WebService/space_of_taste/main/templates/main/index.html
+++ b/WebService/space_of_taste/main/templates/main/index.html
@@ -4,6 +4,12 @@
 
 {% block svg %}
 
+{% for cat in category %}
+{% autoescape off %}
+    {{ cat.icon }}
+{% endautoescape %}
+{% endfor %}
+
 {% endblock %}
 
 {% block content %}
